# backuper

./: .gitignore  CMakeLists.txt
src/: backuper.cpp  backuper.h  global.cpp  global.h  history.cpp  history.h  main.cpp  tools.cpp  tools.h
